# auri

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.md  browser-overlay.css  browser-overlay.html  browser-overlay.js  cluade.md  index.html  package-lock.json  package.json  snake.html  styles.css
.claude/: launch.json
blender-head/: build_head.py  head.blend  head.glb
scripts/: app.mjs  build-files.mjs  build.mjs  dev.mjs  launch-config.mjs  native-build.mjs  native-dev-utils.mjs  native-dev.mjs  native-watch-utils.mjs  native-watch.mjs  native-watch.sh  package-linux-release.mjs  rust-check.mjs  tauri-build.mjs
src/: main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/release/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/cli/: ansi.rs  client.rs  input.rs  local.rs  mod.rs  model.rs  screen.rs  session_state.rs  term.rs  tui.rs  view_model.rs  vt.rs
src-tauri/src/core/: capture.rs  clipboard.rs  files.rs  fileserver.rs  ipc.rs  lifecycle.rs  mod.rs  permissions.rs  shell.rs  state_sync.rs  system.rs  term_bridge.rs  term_emulator.rs  terminal.rs  three-viewer.js  util.rs  viewer.html  vt.rs  webserver.rs  webview.rs  webview_sleep.rs  workspace.rs
src-tauri/tests/: core_tests.rs  folder_files.rs  gpu_process.rs  linux_media_permissions.rs  path_commands.rs  process_priority.rs
src/controllers/: app-controller.js  command-controller.js
src/model/: assistant.js  browser.js  clipboard.js  commands.js  folder.js  path.js  presentation.js  shortcut.js  snapshot.js  state.js  system.js  terminal-completion.js  terminal-input.js
src/services/: backend.js  codemirror-viewer-entry.js  file-viewer-page.js  gemini-live.js  media-recorder.js  terminal-screen.js  terminal-session.js  three-viewer-entry.js
src/views/: app-view.js  panels.js
tests/: assistant-action-layout.test.js  assistant-terminal-controller.test.js  assistant-transcript-popup.test.js  assistant.test.js  backend-ai-request.test.js  browser.test.js  clipboard.test.js  commands.test.js  controller.test.js  docs.test.js  file-webview.test.js  folder.test.js  gemini-live.test.js  info-ai-request.test.js  linux-release-package.test.js  live-mic.test.js  live-prompt.test.js  media-page.test.js  media.test.js  minimal-ui.test.js  mirror-sync.test.js  native-build-script.test.js  native-dev-script.test.js  native-process.test.js  path.test.js  permissions.test.js  presentation.test.js  responsiveness.test.js  settings-ui.test.js  shell-history-bridge.test.js  shortcut.test.js  snapshot.test.js  state-sync.test.js  state.test.js  subtab-scroll.test.js  system.test.js  terminal-completion.test.js  terminal-cursor.test.js  terminal-focus.test.js  terminal-history.test.js  (+7 more)
