[package]
autobins = false
default-run = "auri-desktop"
name = "auri"
version = "0.1.0"
description = "A terminal-centered assistant workspace"
authors = ["Auri contributors"]
edition = "2021"

[[bin]]
name = "auri-desktop"
path = "src/main.rs"

[[bin]]
name = "auri-dev"
path = "src/bin/auri-dev.rs"

[[bin]]
name = "auri"
path = "src/bin/auri.rs"

[lib]
name = "auri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
once_cell = "1.21.4"
tauri-plugin-global-shortcut = "2"
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["png"] }
