[package]
autobins = false
default-run = "auri-desktop"
name = "auri"
version = "0.6.0"
description = "A terminal-centered assistant workspace"
authors = ["Auri contributors"]
edition = "2021"

[[bin]]
name = "auri-desktop"
path = "src/main.rs"

[[bin]]
name = "auri-dev"
path = "src/bin/auri-dev.rs"

[[bin]]
name = "auri"
path = "src/bin/auri.rs"

[lib]
name = "auri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable", "devtools", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
portable-pty = "0.9.0"
once_cell = "1.21.4"
tauri-plugin-global-shortcut = "2"
arboard = { version = "3.6", features = ["wayland-data-control"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
sha2 = "0.10"
raw-window-handle = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGWindow"] }
