[package]
autobins = false
default-run = "auri-desktop"
name = "auri"
version = "0.83.0"
description = "A terminal-centered assistant workspace"
authors = ["Auri contributors"]
edition = "2021"

[[bin]]
name = "auri-desktop"
path = "src/main.rs"

[[bin]]
name = "auri-dev"
path = "src/bin/auri-dev.rs"
required-features = ["dev-bin"]

[[bin]]
name = "auri"
path = "src/bin/auri.rs"
required-features = ["cli-bin"]

[features]
default = []
cli-bin = []
dev-bin = []

[lib]
name = "auri_lib"
# Auri currently targets macOS/Linux desktop. The desktop executables link the
# Rust library directly; staticlib/cdylib would add two unused full link jobs.
crate-type = ["rlib"]

# Keep iterative native builds incremental and inexpensive to link. Release
# binaries remain optimized and stripped, but avoid whole-program LTO because
# it turns every small source edit into a long final link.
[profile.dev]
incremental = true
# Line tables retain useful panic locations while avoiding the much larger
# full debug-info link on each native development edit.
debug = 1

[profile.release]
incremental = true
lto = false
strip = "symbols"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "unstable", "devtools", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
portable-pty = "0.9.0"
once_cell = "1.21.4"
tauri-plugin-global-shortcut = "2"
arboard = { version = "3.6", features = ["wayland-data-control"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "tiff", "webp"] }
sha2 = "0.10"
raw-window-handle = "0.6"

# Raw-mode terminal control (termios/ioctl) for the `auri cli` TUI.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = { version = "2", features = ["v2_40"] }
x11-dl = "2.21.0"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGWindow"] }
